--- a/templates/index.html
+++ b/templates/index.html
@@ -38,11 +38,12 @@
     </form>
   </div>
 
+  <div style="width: 500px; border: 5px solid rgb(5, 145, 143); padding: 10px; margin: 0;">
     {% if prediction is not none %}
-      <p>
-        <h3>The Predicted NIRF college rank is: {{ prediction }}</h3></p>
+      <p >
+        <h3>The Predicted NIRF college rank is: <u><b>{{ prediction }}</u></b></h3></p>
     {% endif %}
-
+</div> 
   <div>
     <br><br>
     <p>
